fix bug 462880 update .msf file when server reports 0 existing messages, w/ unit test, r=neil, sr=standard8