mailnews/imap/src/nsImapProtocol.cpp
@@ -3963,7 +3963,11 @@ void nsImapProtocol::ProcessMailboxUpdate(PRBool handlePossibleUndo)
     }
   }
   else if (!DeathSignalReceived())
+  {
     GetServerStateParser().ResetFlagInfo();
+    // the flag state is empty, but not partial.
+    m_flagState->SetPartialUIDFetch(PR_FALSE);
+  }
 
   if (!DeathSignalReceived())
   {
